NEWS
====

24.0.5  We now ask for a confirmation when deleting cards (#1706)
        Fixed handling of 403 error codes when uploading cards (#2714)
        Added missing translation for hu-HU

24.0.4	Improved etag handling (#1411 and #1624)
	Handle periodic syncing of address books
	Provide basic visual feedback when syncing is occuring (#2328)
	Fixed encoding for contact categories (#2420)

For later changes see ChangeLog.old

0.92
	Fixed unescaping of special characters (\r, \n, ...) from VCARD content

0.90
	Added a new provider for freebusy over HTTP (fburl)
	Searches on CardDAV addressbooks would see their spaces "url-escaped".
	Added support for returning a pre-configurable comment to put on autocomplete records
	Removed dependency on Lightning
	Restored support for the GroupDAV PUT "location" header
	Added dutch translation from roel.van.os@humanitech.nl
	Overwritten the isCalendarWritble() fonction in Lighting to consider WebDAV ACLs
	We now properly manage identities of CalDAV calendars vs. identities within Thunderbird
	We now properly handle servers that don't support ACLs
	Fixed many bugs there and there

0.81
	Check the response from the server to avoid inconsistencies and loss of data
	Take the ACL into account when changing the calendar of the edited event
	Accept local calendars

0.80
	Added support for Lightning 0.8
	CardDAV addressbooks now appear in the compose window
	Added support for DAV acls (with work-around for incomplete implementations of the WebDAV ACL)
	A bug would attempt to synchronize the vcard of the user's signature to when created or modified

0.67
	drag and dropping a card from a GroupDAV directory would not delete the card on th server
	using the German translation would prevent the groupdav addressbook dialog to appear properly
	the synchronize button would no longer be activated
	deleting cards in GroupDAV directories would delete them on the server before the confirmation window was answered